# agentic-os-core

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmarks.py
docs/: api-reference.md  architecture.md  index.md
docs/superpowers/specs/: 2026-05-21-agentic-os-core-v2-design.md
examples/: 01_knowledge_graph.py  02_mcts_reasoning.py  03_full_agent_loop.py  04_custom_evaluator.py  05_persistence_and_restoration.py  06_multi_turn_memory.py
src/agentic_os/: __init__.py  exceptions.py
src/agentic_os/core/: __init__.py
src/agentic_os/core/graph/: __init__.py  edge.py  knowledge_graph.py  node.py  scoring.py  traversal.py
src/agentic_os/core/memory/: __init__.py  consolidation.py  longterm.py  manager.py  shared.py  working.py
src/agentic_os/core/planning/: __init__.py  executor.py  goal.py  planner.py
src/agentic_os/core/storage/: __init__.py  base.py  redis_backend.py  sqlite_backend.py
src/agentic_os/core/tree/: __init__.py  async_mcts.py  mcts.py  pruning.py  search.py  thought_node.py  thought_tree.py
src/agentic_os/core/vector/: __init__.py  base.py  numpy_backend.py
src/agentic_os/ext/: __init__.py
src/agentic_os/ext/langchain/: __init__.py  memory.py  retriever.py  tool.py
src/agentic_os/ext/llamaindex/: __init__.py  vector_store.py
src/agentic_os/ext/visualization/: __init__.py  graph_visualizer.py  tree_visualizer.py
src/agentic_os/plugins/: __init__.py  base.py  mock.py
src/agentic_os/utils/: __init__.py  hashing.py  serialization.py
tests/: conftest.py  test_async_mcts.py  test_coverage_boost.py  test_edge_cases.py  test_exports.py  test_graph.py  test_integration.py  test_langchain.py  test_llamaindex.py  test_mcts.py  test_memory.py  test_planning.py  test_plugins_and_serialization.py  test_properties.py  test_redis_mock.py  test_shared_memory.py  test_storage.py  test_vector.py  test_visualization.py
